--- a/julka.html
+++ b/julka.html
@@ -6,86 +6,7 @@
     <title>Julka</title>
     <link rel="icon" href="20250813_julka.png" type="image/png">
     <link rel="manifest" href="20250813_julka.json">
-    <style>
-        body{
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #E6F7F4;
-            color: #2E5E56;
-        }
-        .container {
-            width: 95%;
-            max-width: 800px;
-            margin: auto;
-            padding-bottom: 15px;
-        }
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-        }
-        a{
-            text-decoration: none;
-            color: #2E5E56;
-            transition: color 0.3s;
-        }
-        a:hover{
-            color: #3EB489;
-            cursor: pointer;
-        }
-        .navbar {
-            display: flex;
-            justify-content: center;
-            background-color: #CFFAF4;
-            padding: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            border-radius: 10px;
-            max-width: 90%;
-            margin: 0 auto;
-            width: auto;
-        }
-        img{
-            width: 300px;    
-        }
-        .app-icon {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #CFFAF4;
-            border-radius: 15px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-            transition: transform 0.2s, background-color 0.2s;
-            text-decoration: none;
-            color: #2E5E56;
-        }
-        .app-icon:hover {
-            background-color: #8FE3CF;
-            transform: scale(1.05);
-        }
-        .app-icon img {
-            width: 100%;
-            max-width: 150px;
-            aspect-ratio: 1/1;
-            object-fit: contain;
-            border-radius: 10px;
-        }
-        .app-icon span {
-            font-size: 14px;
-            margin-top: 5px;
-        }
-        @media (max-width: 500px) {
-            body {
-                margin: 0;
-                padding: 0;
-            }
-        } 
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -103,33 +24,17 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108089/stoper_jpmxaa.png" alt="Stoper">
                 <span>Stoper</span>
             </a>
-            <a href="20250813_poop.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108019/poop.html_rgehum.png" alt="Poop">
-                <span>Poop</span>
-            </a>
-            <a href="20250809_ufo.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
-                <span>Ufo</span>
-            </a>
-            <a href="20250811_wedkarstwo.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
-                <span>Wędkarstwo</span>
-            </a>
-            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
-                <span>Kółko i Krzyżyk</span>
-            </a>
             <a href="20250617_kolofortuny.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
                 <span>Koło Fortuny</span>
             </a>
-            <a href="20250617_kostka.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
-                <span>Kostka</span>
+            <a href="gry.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
+                <span>Gry</span>
             </a>
-            <a href="index.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Dawid">
-                <span>Dawid</span>
+            <a href="aplikacje.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
+                <span>Aplikacje</span>
             </a>
         </div>
     </div>
