--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
                 <span>Aplikacje</span>
             </a>
-            <a href="20250812_emotkiflagi.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993032/emotkisolo_wknxl8.png" alt="Emotki">
-                <span>Emotki</span>
-            </a>
-            <a href="20250811_wedkarstwo.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
-                <span>Wędkarstwo</span>
-            </a>
             <a href="20250809_goldrun.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
                 <span>Gold Run</span>
@@ -35,6 +27,14 @@
             <a href="20250809_ufo.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
                 <span>Ufo</span>
+            </a>
+            <a href="20250811_wedkarstwo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
+                <span>Wędkarstwo</span>
+            </a>
+            <a href="20250815_emotkisolo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993032/emotkisolo_wknxl8.png" alt="Emotki">
+                <span>Emotki</span>
             </a>
             <a href="20250617_kosmicznykwadrat.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
