--- a/gry.html
+++ b/gry.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Gry</h1>
         <div class="buttons">
-            <a href="20250812_emotkiflagi.html" class="app-icon">
+            <a href="20250815_emotkisolo.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993032/emotkisolo_wknxl8.png" alt="Emotki">
                 <span>Emotki</span>
             </a>
