--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250821_frekwencja.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755772507/dziennik_xpixpf.png" alt="Dziennik">
+                <span>Dziennik</span>
+            </a>
             <a href="20250815_usmieszki.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755291466/usmieszki_otsehq.png" alt="Uśmieszki">
                 <span>Uśmieszki</span>
