--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="mediumemotik.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
+                <span>Emotki</span>
+            </a>
             <a href="20250821_frekwencja.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755772507/dziennik_xpixpf.png" alt="Dziennik">
                 <span>Dziennik</span>
