--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,19 +121,66 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'😈', pl:'Diabeł', en:'Devil', others:['devilface', 'devel', 'diabel']},
-  {emoji:'💀', pl:'Czaszka', en:'Skull', others:['skul', 'skeleton', 'czaszka']},
-  {emoji:'💥', pl:'Wybuch', en:'Explosion', others:['explosion', 'bang', 'wybuch']},
-  {emoji:'🫁', pl:'Płuca', en:'Lungs', others:['lung', 'lungsorgans', 'pluca']},
-  {emoji:'🩸', pl:'Krew', en:'Blood', others:['bloood', 'blooddrop', 'krew']},
-  {emoji:'🧑‍🦽', pl:'Osoba na wózku inwalidzkim', en:'Person in Wheelchair', others:['wheelchairperson', 'wheelchaired', 'wozek']},
-  {emoji:'🤺', pl:'Szermierka', en:'Fencing', others:['fencingperson', 'swordfight', 'szermierka']},
-  {emoji:'🪂', pl:'Paralotnia', en:'Parachute', others:['parachuting', 'skydiving', 'paralotnia']},
-  {emoji:'🧜', pl:'Syrena', en:'Mermaid', others:['merman', 'mermaide', 'syrena']},
-  {emoji:'👷', pl:'Budowlaniec', en:'Construction Worker', others:['builder', 'constructionworker', 'budowlaniec']},
-  {emoji:'🤰', pl:'Kobieta w Ciąży', en:'Pregnant Woman', others:['pregnant', 'pregnantlady', 'ciaza']}
+  {emoji:'💦', pl:'Krople', en:'Drops', others:['droplets', 'waterdrops', 'krople']},
+  {emoji:'👍', pl:'Kciuk w Górę', en:'Thumbs Up', others:['thumbup', 'like', 'kciuk']},
+  {emoji:'🤛', pl:'Żółwik', en:'Fist Bump', others:['fistbumb', 'punch', 'zolwik']},
+  {emoji:'👊', pl:'Pięść', en:'Fist', others:['fisst', 'punch', 'piesz']},
+  {emoji:'👏', pl:'Klaskanie', en:'Clapping', others:['applause', 'clap', 'klaskanie']},
+  {emoji:'👋', pl:'Machająca Dłoń', en:'Waving Hand', others:['wave', 'handwave', 'machanie']},
+  {emoji:'🙏', pl:'Modlenie', en:'Praying', others:['pray', 'handsjoined', 'modlenie']},
+  {emoji:'💅', pl:'Lakier do Paznokci', en:'Nail Polish', others:['nailpolisch', 'manicure', 'lakier']},
+  {emoji:'🤝', pl:'Uścisk Dłoni', en:'Handshake', others:['handshacke', 'shakehands', 'uscisk']},
+  {emoji:'😀', pl:'Radość', en:'Joy', others:['joyfull', 'smile', 'radość']},
+  {emoji:'😭', pl:'Płacz', en:'Crying', others:['cry', 'tears', 'placz']},
+  {emoji:'🥰', pl:'Miłość', en:'Love', others:['lvoe', 'affection', 'milosc']},
+  {emoji:'😍', pl:'Zakochany', en:'In Love', others:['loveeyes', 'loving', 'zakochany']},
+  {emoji:'🤫', pl:'Cisza', en:'Silence', others:['shush', 'quiet', 'cisza']},
+  {emoji:'🤭', pl:'Śmiech', en:'Giggling', others:['laugh', 'giggle', 'smiech']},
+  {emoji:'😡', pl:'Gniew', en:'Anger', others:['angrry', 'mad', 'gniew']},
+  {emoji:'😤', pl:'Zdenerwowany', en:'Annoyed', others:['annoyd', 'frustrated', 'zdenerwowany']},
+  {emoji:'😟', pl:'Smutek', en:'Sadness', others:['sad', 'unhappy', 'smutek']},
+  {emoji:'😱', pl:'Strach', en:'Fear', others:['shock', 'scared', 'strach']},
+  {emoji:'🤮', pl:'Wymioty', en:'Vomiting', others:['throwup', 'puke', 'wymioty']},
+  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
+  {emoji:'🤒', pl:'Gorączka', en:'Fever', others:['feever', 'ill', 'goraczka']},
+  {emoji:'🤥', pl:'Skłamanie', en:'Lying', others:['lie', 'lyingface', 'sklamanie']},
+  {emoji:'😇', pl:'Grzeczny', en:'Innocent', others:['angel', 'goodboy', 'grzeczny']},
+  {emoji:'🤑', pl:'Bogaty', en:'Rich', others:['moneyface', 'wealthy', 'bogaty']},
+  {emoji:'👣', pl:'Ślady', en:'Footprints', others:['footprint', 'tracks', 'slady']}
      ],
      medium:[
+  {emoji:'⚡', pl:'Błyskawica', en:'Lightning', others:['lightening', 'flash', 'blyskawica']},
+  {emoji:'💨', pl:'Wiatr', en:'Wind', others:['breeze', 'gale', 'wiatr']},
+  {emoji:'🎊', pl:'Konfetti', en:'Confetti', others:['confeti', 'celebration', 'konfetti']},
+  {emoji:'🕳️', pl:'Dziura', en:'Hole', others:['hoal', 'blackhole', 'dziura']},
+  {emoji:'🦷', pl:'Ząb', en:'Tooth', others:['toothh', 'teeth', 'zab']},
+  {emoji:'👁️', pl:'Oko', en:'Eye', others:['eyes', 'eyeball', 'oko']},
+  {emoji:'👄', pl:'Usta', en:'Mouth', others:['mouuth', 'lips', 'usta']},
+  {emoji:'👃', pl:'Nos', en:'Nose', others:['noze', 'nostril', 'nos']},
+  {emoji:'👂', pl:'Ucho', en:'Ear', others:['earr', 'hearing', 'ucho']},
+  {emoji:'🦶', pl:'Stopa', en:'Foot', others:['feett', 'footstep', 'stopa']},
+  {emoji:'🦵', pl:'Noga', en:'Leg', others:['legg', 'thigh', 'noga']},
+  {emoji:'💪', pl:'Biceps', en:'Biceps', others:['muscle', 'bicep', 'bicebs']},
+  {emoji:'✍️', pl:'Pisanie', en:'Writing', others:['wrighting', 'note', 'pisanie']},
+  {emoji:'😘', pl:'Całus', en:'Kiss', others:['kissing', 'kissyface', 'calus']},
+  {emoji:'🤔', pl:'Myślenie', en:'Thinking', others:['think', 'thought', 'myslenie']},
+  {emoji:'🥶', pl:'Zimno', en:'Cold', others:['freezing', 'frosty', 'zimno']},
+  {emoji:'🥵', pl:'Gorąco', en:'Hot', others:['heat', 'hotface', 'goraco']},
+  {emoji:'😴', pl:'Spanie', en:'Sleeping', others:['sleep', 'sleepingface', 'spanie']},
+  {emoji:'🧠', pl:'Mózg', en:'Brain', others:['brainn', 'mind', 'mozg']},
+  {emoji:'🫀', pl:'Serce', en:'Heart', others:['hart', 'organheart', 'serce']},
+  {emoji:'🦠', pl:'Wirus', en:'Virus', others:['bacteria', 'viruss', 'wirus']},
+  {emoji:'💌', pl:'List Miłosny', en:'Love Letter', others:['letter', 'mail', 'list']},
+  {emoji:'💤', pl:'Sen', en:'Sleep', others:['sleeping', 'dream', 'sen']}
+     ],
+     hard:[
+  {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
+  {emoji:'👻', pl:'Duch', en:'Ghost', others:['ghoust', 'spirit', 'duch']},
+  {emoji:'🤖', pl:'Robot', en:'Robot', others:['robotface', 'robbot', 'robot']},
+  {emoji:'👹', pl:'Maska', en:'Mask', others:['ogremask', 'monsterface', 'maska', 'Ogre Mask']},
+  {emoji:'🧝', pl:'Elf', en:'Elf', others:['elfin', 'elfperson', 'indianin']},
+  {emoji:'🧙', pl:'Czarodziej', en:'Wizard', others:['wizzard', 'mage', 'czarodziej']},
+  {emoji:'🧛', pl:'Wampir', en:'Vampire', others:['vampyre', 'vamp', 'wampir']},
   {emoji:'🎃', pl:'Dynia', en:'Pumpkin', others:['jackolantern', 'pumpkin', 'dunia']},
   {emoji:'👽', pl:'Kosmita', en:'Alien', others:['alienface', 'extraterrestrial', 'kosmita']},
   {emoji:'🦴', pl:'Kość', en:'Bone', others:['skeletbone', 'bon', 'kosc']},
@@ -151,16 +198,18 @@
   {emoji:'🧑‍🎨', pl:'Malarz', en:'Painter', others:['painterartist', 'artst', 'malarz']},
   {emoji:'🧑‍🍳', pl:'Kucharz', en:'Chef', others:['cook', 'chief', 'kucharz']},
   {emoji:'💃', pl:'Tancerka', en:'Dancer', others:['dancerwoman', 'dansing', 'tancerka']},
-  {emoji:'🕺', pl:'Tancerz', en:'Man Dancing', others:['mandancing', 'dancer', 'tancerz']}
-     ],
-     hard:[
-  {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
-  {emoji:'👻', pl:'Duch', en:'Ghost', others:['ghoust', 'spirit', 'duch']},
-  {emoji:'🤖', pl:'Robot', en:'Robot', others:['robotface', 'robbot', 'robot']},
-  {emoji:'👹', pl:'Maska', en:'Mask', others:['ogremask', 'monsterface', 'maska', 'Ogre Mask']},
-  {emoji:'🧝', pl:'Elf', en:'Elf', others:['elfin', 'elfperson', 'indianin']},
-  {emoji:'🧙', pl:'Czarodziej', en:'Wizard', others:['wizzard', 'mage', 'czarodziej']},
-  {emoji:'🧛', pl:'Wampir', en:'Vampire', others:['vampyre', 'vamp', 'wampir']}
+  {emoji:'🕺', pl:'Tancerz', en:'Man Dancing', others:['mandancing', 'dancer', 'tancerz']},
+  {emoji:'😈', pl:'Diabeł', en:'Devil', others:['devilface', 'devel', 'diabel']},
+  {emoji:'💀', pl:'Czaszka', en:'Skull', others:['skul', 'skeleton', 'czaszka']},
+  {emoji:'💥', pl:'Wybuch', en:'Explosion', others:['explosion', 'bang', 'wybuch']},
+  {emoji:'🫁', pl:'Płuca', en:'Lungs', others:['lung', 'lungsorgans', 'pluca']},
+  {emoji:'🩸', pl:'Krew', en:'Blood', others:['bloood', 'blooddrop', 'krew']},
+  {emoji:'🧑‍🦽', pl:'Osoba na wózku inwalidzkim', en:'Person in Wheelchair', others:['wheelchairperson', 'wheelchaired', 'wozek']},
+  {emoji:'🤺', pl:'Szermierka', en:'Fencing', others:['fencingperson', 'swordfight', 'szermierka']},
+  {emoji:'🪂', pl:'Paralotnia', en:'Parachute', others:['parachuting', 'skydiving', 'paralotnia']},
+  {emoji:'🧜', pl:'Syrena', en:'Mermaid', others:['merman', 'mermaide', 'syrena']},
+  {emoji:'👷', pl:'Budowlaniec', en:'Construction Worker', others:['builder', 'constructionworker', 'budowlaniec']},
+  {emoji:'🤰', pl:'Kobieta w Ciąży', en:'Pregnant Woman', others:['pregnant', 'pregnantlady', 'ciaza']}
      ]
     };
 
