--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,57 +121,44 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'💦', pl:'Krople', en:'Drops', others:['droplets', 'waterdrops', 'krople']},
-  {emoji:'👍', pl:'Kciuk w Górę', en:'Thumbs Up', others:['thumbup', 'like', 'kciuk']},
-  {emoji:'🤛', pl:'Żółwik', en:'Fist Bump', others:['fistbumb', 'punch', 'zolwik']},
-  {emoji:'👊', pl:'Pięść', en:'Fist', others:['fisst', 'punch', 'piesz']},
-  {emoji:'👏', pl:'Klaskanie', en:'Clapping', others:['applause', 'clap', 'klaskanie']},
-  {emoji:'👋', pl:'Machająca Dłoń', en:'Waving Hand', others:['wave', 'handwave', 'machanie']},
-  {emoji:'🙏', pl:'Modlenie', en:'Praying', others:['pray', 'handsjoined', 'modlenie']},
-  {emoji:'💅', pl:'Lakier do Paznokci', en:'Nail Polish', others:['nailpolisch', 'manicure', 'lakier']},
-  {emoji:'🤝', pl:'Uścisk Dłoni', en:'Handshake', others:['handshacke', 'shakehands', 'uscisk']},
-  {emoji:'😀', pl:'Radość', en:'Joy', others:['joyfull', 'smile', 'radość']},
-  {emoji:'😭', pl:'Płacz', en:'Crying', others:['cry', 'tears', 'placz']},
-  {emoji:'🥰', pl:'Miłość', en:'Love', others:['lvoe', 'affection', 'milosc']},
-  {emoji:'😍', pl:'Zakochany', en:'In Love', others:['loveeyes', 'loving', 'zakochany']},
-  {emoji:'🤫', pl:'Cisza', en:'Silence', others:['shush', 'quiet', 'cisza']},
-  {emoji:'🤭', pl:'Śmiech', en:'Giggling', others:['laugh', 'giggle', 'smiech']},
-  {emoji:'😡', pl:'Gniew', en:'Anger', others:['angrry', 'mad', 'gniew']},
-  {emoji:'😤', pl:'Zdenerwowany', en:'Annoyed', others:['annoyd', 'frustrated', 'zdenerwowany']},
-  {emoji:'😟', pl:'Smutek', en:'Sadness', others:['sad', 'unhappy', 'smutek']},
-  {emoji:'😱', pl:'Strach', en:'Fear', others:['shock', 'scared', 'strach']},
-  {emoji:'🤮', pl:'Wymioty', en:'Vomiting', others:['throwup', 'puke', 'wymioty']},
-  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
-  {emoji:'🤒', pl:'Gorączka', en:'Fever', others:['feever', 'ill', 'goraczka']},
-  {emoji:'🤥', pl:'Skłamanie', en:'Lying', others:['lie', 'lyingface', 'sklamanie']},
-  {emoji:'😇', pl:'Grzeczny', en:'Innocent', others:['angel', 'goodboy', 'grzeczny']},
-  {emoji:'🤑', pl:'Bogaty', en:'Rich', others:['moneyface', 'wealthy', 'bogaty']},
-  {emoji:'👣', pl:'Ślady', en:'Footprints', others:['footprint', 'tracks', 'slady']}
+  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
+  {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
+  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
+  {emoji:'🧚', pl:'Wróżka', en:'Fairy', others:['faery', 'pixie', 'wrozka']},
+  {emoji:'👸', pl:'Księżniczka', en:'Princess', others:['priness', 'royal lady', 'ksiezniczka']},
+  {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
+  {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
+  {emoji:'🧑‍🏭', pl:'Robotnik Fabryczny', en:'Factory Worker', others:['plant worker', 'worker factory', 'robotnik']},
+  {emoji:'🧑‍⚖️', pl:'Sędzia', en:'Judge', others:['judje', 'court judge', 'sedzia']},
+  {emoji:'🧑‍💻', pl:'Programista', en:'Programmer', others:['coder', 'developer', 'programista']},
+  {emoji:'👶', pl:'Niemowlę', en:'Baby', others:['babby', 'infant', 'niemowle']},
+  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']},
+  {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']}
      ],
      medium:[
-  {emoji:'⚡', pl:'Błyskawica', en:'Lightning', others:['lightening', 'flash', 'blyskawica']},
-  {emoji:'💨', pl:'Wiatr', en:'Wind', others:['breeze', 'gale', 'wiatr']},
-  {emoji:'🎊', pl:'Konfetti', en:'Confetti', others:['confeti', 'celebration', 'konfetti']},
-  {emoji:'🕳️', pl:'Dziura', en:'Hole', others:['hoal', 'blackhole', 'dziura']},
-  {emoji:'🦷', pl:'Ząb', en:'Tooth', others:['toothh', 'teeth', 'zab']},
-  {emoji:'👁️', pl:'Oko', en:'Eye', others:['eyes', 'eyeball', 'oko']},
-  {emoji:'👄', pl:'Usta', en:'Mouth', others:['mouuth', 'lips', 'usta']},
-  {emoji:'👃', pl:'Nos', en:'Nose', others:['noze', 'nostril', 'nos']},
-  {emoji:'👂', pl:'Ucho', en:'Ear', others:['earr', 'hearing', 'ucho']},
-  {emoji:'🦶', pl:'Stopa', en:'Foot', others:['feett', 'footstep', 'stopa']},
-  {emoji:'🦵', pl:'Noga', en:'Leg', others:['legg', 'thigh', 'noga']},
-  {emoji:'💪', pl:'Biceps', en:'Biceps', others:['muscle', 'bicep', 'bicebs']},
-  {emoji:'✍️', pl:'Pisanie', en:'Writing', others:['wrighting', 'note', 'pisanie']},
-  {emoji:'😘', pl:'Całus', en:'Kiss', others:['kissing', 'kissyface', 'calus']},
-  {emoji:'🤔', pl:'Myślenie', en:'Thinking', others:['think', 'thought', 'myslenie']},
-  {emoji:'🥶', pl:'Zimno', en:'Cold', others:['freezing', 'frosty', 'zimno']},
-  {emoji:'🥵', pl:'Gorąco', en:'Hot', others:['heat', 'hotface', 'goraco']},
-  {emoji:'😴', pl:'Spanie', en:'Sleeping', others:['sleep', 'sleepingface', 'spanie']},
-  {emoji:'🧠', pl:'Mózg', en:'Brain', others:['brainn', 'mind', 'mozg']},
-  {emoji:'🫀', pl:'Serce', en:'Heart', others:['hart', 'organheart', 'serce']},
-  {emoji:'🦠', pl:'Wirus', en:'Virus', others:['bacteria', 'viruss', 'wirus']},
-  {emoji:'💌', pl:'List Miłosny', en:'Love Letter', others:['letter', 'mail', 'list']},
-  {emoji:'💤', pl:'Sen', en:'Sleep', others:['sleeping', 'dream', 'sen']}
+  {emoji:'💇', pl:'Strzyżenie Włosów', en:'Haircut', others:['hair cut', 'hairdressing', 'strzyzenie']},
+  {emoji:'🛀', pl:'Kąpanie się', en:'Bathing', others:['taking bath', 'bathe', 'kapniecie']},
+  {emoji:'⛹️', pl:'Kozłowanie', en:'Dribbling', others:['dribble', 'ball handling', 'kozlowanie']},
+  {emoji:'🤾', pl:'Rzucanie Piłki', en:'Ball Throwing', others:['throw ball', 'ball toss', 'rzucanie pilki']},
+  {emoji:'🚴', pl:'Jazda na Rowerze', en:'Cycling', others:['bike riding', 'bicycling', 'rower']},
+  {emoji:'🧗', pl:'Wspinanie się', en:'Climbing', others:['rock climbing', 'mountain climb', 'wspinanie']},
+  {emoji:'🏌️', pl:'Granie w Golfa', en:'Playing Golf', others:['golfing', 'golfer', 'gra w golfa']},
+  {emoji:'🏇', pl:'Jazda Konno', en:'Horse Riding', others:['horseback riding', 'equestrian', 'jazda konno']},
+  {emoji:'⛷️', pl:'Jazda na Nartach', en:'Skiing', others:['ski', 'snow skiing', 'narty']},
+  {emoji:'🏂', pl:'Jazda na Snowboardzie', en:'Snowboarding', others:['snow board', 'snowboarder', 'snowbord']},
+  {emoji:'🏄', pl:'Surfowanie', en:'Surfing', others:['surf board', 'surf ride', 'surfowanie']},
+  {emoji:'🚣', pl:'Pływanie Łódką', en:'Rowing Boat', others:['rowing', 'boat paddling', 'plywanie lodka']},
+  {emoji:'🏊', pl:'Pływanie', en:'Swimming', others:['swim', 'swimming pool', 'plywanie']},
+  {emoji:'🤽', pl:'Piłka Wodna', en:'Water Polo', others:['waterpolo', 'pool ball', 'pilka wodna']},
+  {emoji:'🧑‍🎄', pl:'Mikołajowa', en:'Mrs Claus', others:['miss claus', 'santa wife', 'mikolajowa']},
+  {emoji:'🕵️', pl:'Detektyw', en:'Detective', others:['detectiv', 'investigator', 'detektyw']},
+  {emoji:'🧑‍🔬', pl:'Naukowiec', en:'Scientist', others:['sciense person', 'researcher', 'naukowiec']},
+  {emoji:'🧑‍🏫', pl:'Nauczyciel', en:'Teacher', others:['techer', 'instructor', 'nauczyciel']},
+  {emoji:'🧑‍🎓', pl:'Student', en:'Student', others:['studnet', 'pupil', 'student']},
+  {emoji:'🧑‍🦳', pl:'Siwe Włosy', en:'White Hair', others:['grey hair', 'silver hair', 'siwe wlosy']},
+  {emoji:'🧑‍🦰', pl:'Rude Włosy', en:'Red Hair', others:['ginger hair', 'orange hair', 'rude wlosy']},
+  {emoji:'👱', pl:'Blond Włosy', en:'Blond Hair', others:['blonde', 'yellow hair', 'blond wlosy']},
+  {emoji:'🧑‍🦱', pl:'Kręcone Włosy', en:'Curly Hair', others:['curley hair', 'wavy hair', 'krecne wlosy']}
      ],
      hard:[
   {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
@@ -209,7 +196,56 @@
   {emoji:'🪂', pl:'Paralotnia', en:'Parachute', others:['parachuting', 'skydiving', 'paralotnia']},
   {emoji:'🧜', pl:'Syrena', en:'Mermaid', others:['merman', 'mermaide', 'syrena']},
   {emoji:'👷', pl:'Budowlaniec', en:'Construction Worker', others:['builder', 'constructionworker', 'budowlaniec']},
-  {emoji:'🤰', pl:'Kobieta w Ciąży', en:'Pregnant Woman', others:['pregnant', 'pregnantlady', 'ciaza']}
+  {emoji:'🤰', pl:'Kobieta w Ciąży', en:'Pregnant Woman', others:['pregnant', 'pregnantlady', 'ciaza']},
+  {emoji:'⚡', pl:'Błyskawica', en:'Lightning', others:['lightening', 'flash', 'blyskawica']},
+  {emoji:'💨', pl:'Wiatr', en:'Wind', others:['breeze', 'gale', 'wiatr']},
+  {emoji:'🎊', pl:'Konfetti', en:'Confetti', others:['confeti', 'celebration', 'konfetti']},
+  {emoji:'🕳️', pl:'Dziura', en:'Hole', others:['hoal', 'blackhole', 'dziura']},
+  {emoji:'🦷', pl:'Ząb', en:'Tooth', others:['toothh', 'teeth', 'zab']},
+  {emoji:'👁️', pl:'Oko', en:'Eye', others:['eyes', 'eyeball', 'oko']},
+  {emoji:'👄', pl:'Usta', en:'Mouth', others:['mouuth', 'lips', 'usta']},
+  {emoji:'👃', pl:'Nos', en:'Nose', others:['noze', 'nostril', 'nos']},
+  {emoji:'👂', pl:'Ucho', en:'Ear', others:['earr', 'hearing', 'ucho']},
+  {emoji:'🦶', pl:'Stopa', en:'Foot', others:['feett', 'footstep', 'stopa']},
+  {emoji:'🦵', pl:'Noga', en:'Leg', others:['legg', 'thigh', 'noga']},
+  {emoji:'💪', pl:'Biceps', en:'Biceps', others:['muscle', 'bicep', 'bicebs']},
+  {emoji:'✍️', pl:'Pisanie', en:'Writing', others:['wrighting', 'note', 'pisanie']},
+  {emoji:'😘', pl:'Całus', en:'Kiss', others:['kissing', 'kissyface', 'calus']},
+  {emoji:'🤔', pl:'Myślenie', en:'Thinking', others:['think', 'thought', 'myslenie']},
+  {emoji:'🥶', pl:'Zimno', en:'Cold', others:['freezing', 'frosty', 'zimno']},
+  {emoji:'🥵', pl:'Gorąco', en:'Hot', others:['heat', 'hotface', 'goraco']},
+  {emoji:'😴', pl:'Spanie', en:'Sleeping', others:['sleep', 'sleepingface', 'spanie']},
+  {emoji:'🧠', pl:'Mózg', en:'Brain', others:['brainn', 'mind', 'mozg']},
+  {emoji:'🫀', pl:'Serce', en:'Heart', others:['hart', 'organheart', 'serce']},
+  {emoji:'🦠', pl:'Wirus', en:'Virus', others:['bacteria', 'viruss', 'wirus']},
+  {emoji:'💌', pl:'List Miłosny', en:'Love Letter', others:['letter', 'mail', 'list']},
+  {emoji:'💤', pl:'Sen', en:'Sleep', others:['sleeping', 'dream', 'sen']},
+  {emoji:'💦', pl:'Krople', en:'Drops', others:['droplets', 'waterdrops', 'krople']},
+  {emoji:'👍', pl:'Kciuk w Górę', en:'Thumbs Up', others:['thumbup', 'like', 'kciuk']},
+  {emoji:'🤛', pl:'Żółwik', en:'Fist Bump', others:['fistbumb', 'punch', 'zolwik']},
+  {emoji:'👊', pl:'Pięść', en:'Fist', others:['fisst', 'punch', 'piesz']},
+  {emoji:'👏', pl:'Klaskanie', en:'Clapping', others:['applause', 'clap', 'klaskanie']},
+  {emoji:'👋', pl:'Machająca Dłoń', en:'Waving Hand', others:['wave', 'handwave', 'machanie']},
+  {emoji:'🙏', pl:'Modlenie', en:'Praying', others:['pray', 'handsjoined', 'modlenie']},
+  {emoji:'💅', pl:'Lakier do Paznokci', en:'Nail Polish', others:['nailpolisch', 'manicure', 'lakier']},
+  {emoji:'🤝', pl:'Uścisk Dłoni', en:'Handshake', others:['handshacke', 'shakehands', 'uscisk']},
+  {emoji:'😀', pl:'Radość', en:'Joy', others:['joyfull', 'smile', 'radość']},
+  {emoji:'😭', pl:'Płacz', en:'Crying', others:['cry', 'tears', 'placz']},
+  {emoji:'🥰', pl:'Miłość', en:'Love', others:['lvoe', 'affection', 'milosc']},
+  {emoji:'😍', pl:'Zakochany', en:'In Love', others:['loveeyes', 'loving', 'zakochany']},
+  {emoji:'🤫', pl:'Cisza', en:'Silence', others:['shush', 'quiet', 'cisza']},
+  {emoji:'🤭', pl:'Śmiech', en:'Giggling', others:['laugh', 'giggle', 'smiech']},
+  {emoji:'😡', pl:'Gniew', en:'Anger', others:['angrry', 'mad', 'gniew']},
+  {emoji:'😤', pl:'Zdenerwowany', en:'Annoyed', others:['annoyd', 'frustrated', 'zdenerwowany']},
+  {emoji:'😟', pl:'Smutek', en:'Sadness', others:['sad', 'unhappy', 'smutek']},
+  {emoji:'😱', pl:'Strach', en:'Fear', others:['shock', 'scared', 'strach']},
+  {emoji:'🤮', pl:'Wymioty', en:'Vomiting', others:['throwup', 'puke', 'wymioty']},
+  {emoji:'🤧', pl:'Kichanie', en:'Sneezing', others:['sneeze', 'sneezingface', 'kichanie']},
+  {emoji:'🤒', pl:'Gorączka', en:'Fever', others:['feever', 'ill', 'goraczka']},
+  {emoji:'🤥', pl:'Skłamanie', en:'Lying', others:['lie', 'lyingface', 'sklamanie']},
+  {emoji:'😇', pl:'Grzeczny', en:'Innocent', others:['angel', 'goodboy', 'grzeczny']},
+  {emoji:'🤑', pl:'Bogaty', en:'Rich', others:['moneyface', 'wealthy', 'bogaty']},
+  {emoji:'👣', pl:'Ślady', en:'Footprints', others:['footprint', 'tracks', 'slady']}
      ]
     };
 
