--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250824_puchar.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756053557/pucharklubow_rqrmvj.png" alt="Puchar">
+                <span>Puchar</span>
+            </a>
+            <a href="20250823_sierpien.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756053414/sierpien_vzugrt.png" alt="Sierpień">
+                <span>Sierpień</span>
+            </a>
             <a href="mediumemotik.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
