--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,44 +121,62 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
-  {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
-  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
-  {emoji:'🧚', pl:'Wróżka', en:'Fairy', others:['faery', 'pixie', 'wrozka']},
-  {emoji:'👸', pl:'Księżniczka', en:'Princess', others:['priness', 'royal lady', 'ksiezniczka']},
-  {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
-  {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
-  {emoji:'🧑‍🏭', pl:'Robotnik Fabryczny', en:'Factory Worker', others:['plant worker', 'worker factory', 'robotnik']},
-  {emoji:'🧑‍⚖️', pl:'Sędzia', en:'Judge', others:['judje', 'court judge', 'sedzia']},
-  {emoji:'🧑‍💻', pl:'Programista', en:'Programmer', others:['coder', 'developer', 'programista']},
-  {emoji:'👶', pl:'Niemowlę', en:'Baby', others:['babby', 'infant', 'niemowle']},
-  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']},
-  {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']}
+  {emoji:'💐', pl:'Bukiet', en:'Bouquet', others:['bouqet', 'flower bunch', 'bukiet']},
+  {emoji:'🥀', pl:'Zwiędła Kwiat', en:'Wilted Flower', others:['wilted flowr', 'dead flower', 'zwiedla kwiat']},
+  {emoji:'🌼', pl:'Stokrotka', en:'Daisy', others:['dazie', 'flower daisy', 'stokrotka']},
+  {emoji:'🍄', pl:'Muchomor', en:'Toadstool', others:['mushroom', 'poison mushroom', 'muchomor']},
+  {emoji:'🌾', pl:'Zboże', en:'Wheat', others:['grain', 'crop wheat', 'zboze']},
+  {emoji:'🌱', pl:'Kiełek', en:'Seedling', others:['seedlng', 'young plant', 'kielek']},
+  {emoji:'☘️', pl:'Koniczynka', en:'Shamrock', others:['shamrok', 'clover', 'koniczynka']},
+  {emoji:'🍀', pl:'Czterolistna Koniczynka', en:'Four-Leaf Clover', others:['four leaf', 'lucky clover', 'czterolistna koniczynka']},
+  {emoji:'🪴', pl:'Roślina Doniczkowa', en:'Potted Plant', others:['pot plant', 'indoor plant', 'paprotki']},
+  {emoji:'🌲', pl:'Choinka', en:'Pine Tree', others:['pine', 'christmas tree', 'choinka']},
+  {emoji:'❄️', pl:'Płatek Śniegu', en:'Snowflake', others:['snow flake', 'ice crystal', 'platek sniegu']},
+  {emoji:'🌡️', pl:'Termometr', en:'Thermometer', others:['thermom', 'temperature gauge', 'termometr']},
+  {emoji:'💧', pl:'Kropla', en:'Droplet', others:['drop', 'water drop', 'kropla']},
+  {emoji:'🌠', pl:'Spadająca Gwiazda', en:'Shooting Star', others:['falling star', 'shooting-star', 'spadajaca gwiazda']},
+  {emoji:'🌌', pl:'Droga Mleczna', en:'Milky Way', others:['milkey way', 'galaxy', 'droga mleczna']}
      ],
      medium:[
-  {emoji:'💇', pl:'Strzyżenie Włosów', en:'Haircut', others:['hair cut', 'hairdressing', 'strzyzenie']},
-  {emoji:'🛀', pl:'Kąpanie się', en:'Bathing', others:['taking bath', 'bathe', 'kapniecie']},
-  {emoji:'⛹️', pl:'Kozłowanie', en:'Dribbling', others:['dribble', 'ball handling', 'kozlowanie']},
-  {emoji:'🤾', pl:'Rzucanie Piłki', en:'Ball Throwing', others:['throw ball', 'ball toss', 'rzucanie pilki']},
-  {emoji:'🚴', pl:'Jazda na Rowerze', en:'Cycling', others:['bike riding', 'bicycling', 'rower']},
-  {emoji:'🧗', pl:'Wspinanie się', en:'Climbing', others:['rock climbing', 'mountain climb', 'wspinanie']},
-  {emoji:'🏌️', pl:'Granie w Golfa', en:'Playing Golf', others:['golfing', 'golfer', 'gra w golfa']},
-  {emoji:'🏇', pl:'Jazda Konno', en:'Horse Riding', others:['horseback riding', 'equestrian', 'jazda konno']},
-  {emoji:'⛷️', pl:'Jazda na Nartach', en:'Skiing', others:['ski', 'snow skiing', 'narty']},
-  {emoji:'🏂', pl:'Jazda na Snowboardzie', en:'Snowboarding', others:['snow board', 'snowboarder', 'snowbord']},
-  {emoji:'🏄', pl:'Surfowanie', en:'Surfing', others:['surf board', 'surf ride', 'surfowanie']},
-  {emoji:'🚣', pl:'Pływanie Łódką', en:'Rowing Boat', others:['rowing', 'boat paddling', 'plywanie lodka']},
-  {emoji:'🏊', pl:'Pływanie', en:'Swimming', others:['swim', 'swimming pool', 'plywanie']},
-  {emoji:'🤽', pl:'Piłka Wodna', en:'Water Polo', others:['waterpolo', 'pool ball', 'pilka wodna']},
-  {emoji:'🧑‍🎄', pl:'Mikołajowa', en:'Mrs Claus', others:['miss claus', 'santa wife', 'mikolajowa']},
-  {emoji:'🕵️', pl:'Detektyw', en:'Detective', others:['detectiv', 'investigator', 'detektyw']},
-  {emoji:'🧑‍🔬', pl:'Naukowiec', en:'Scientist', others:['sciense person', 'researcher', 'naukowiec']},
-  {emoji:'🧑‍🏫', pl:'Nauczyciel', en:'Teacher', others:['techer', 'instructor', 'nauczyciel']},
-  {emoji:'🧑‍🎓', pl:'Student', en:'Student', others:['studnet', 'pupil', 'student']},
-  {emoji:'🧑‍🦳', pl:'Siwe Włosy', en:'White Hair', others:['grey hair', 'silver hair', 'siwe wlosy']},
-  {emoji:'🧑‍🦰', pl:'Rude Włosy', en:'Red Hair', others:['ginger hair', 'orange hair', 'rude wlosy']},
-  {emoji:'👱', pl:'Blond Włosy', en:'Blond Hair', others:['blonde', 'yellow hair', 'blond wlosy']},
-  {emoji:'🧑‍🦱', pl:'Kręcone Włosy', en:'Curly Hair', others:['curley hair', 'wavy hair', 'krecne wlosy']}
+  {emoji:'🧎', pl:'Klękanie', en:'Kneeling', others:['kneel', 'kneeling down', 'klenkanie']},
+  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
+  {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
+  {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
+  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']},
+  {emoji:'🧔', pl:'Osoba z Brodą', en:'Bearded Person', others:['beard man', 'bearded', 'osoba z broda']},
+  {emoji:'🌹', pl:'Róża', en:'Rose', others:['roze', 'roses', 'roza']},
+  {emoji:'🌷', pl:'Tulipan', en:'Tulip', others:['tulipn', 'flower tulip', 'tulipan']},
+  {emoji:'🌻', pl:'Słonecznik', en:'Sunflower', others:['sun flowr', 'sun-flower', 'slonecznik']},
+  {emoji:'🍂', pl:'Liście', en:'Leaves', others:['leafs', 'fall leaves', 'liscie']},
+  {emoji:'🍁', pl:'Liść', en:'Leaf', others:['lef', 'single leaf', 'lisc']},
+  {emoji:'🌵', pl:'Kaktus', en:'Cactus', others:['cactos', 'desert cactus', 'kaktus']},
+  {emoji:'🌴', pl:'Palma', en:'Palm Tree', others:['palm', 'tropical tree', 'palma']},
+  {emoji:'🌳', pl:'Drzewo', en:'Tree', others:['tre', 'forest tree', 'drzewo']},
+  {emoji:'🪵', pl:'Drewno', en:'Wood', others:['wooden', 'log', 'drewno']},
+  {emoji:'🪨', pl:'Kamień', en:'Rock', others:['stone', 'boulder', 'kamien']},
+  {emoji:'⛰️', pl:'Góra', en:'Mountain', others:['mountin', 'hill', 'gora']},
+  {emoji:'☃️', pl:'Bałwan', en:'Snowman', others:['snow man', 'snow figure', 'balwan']},
+  {emoji:'🔥', pl:'Ogień', en:'Fire', others:['fier', 'flame', 'ogien']},
+  {emoji:'🌋', pl:'Wulkan', en:'Volcano', others:['volcan', 'erupting mountain', 'wulkan']},
+  {emoji:'🏜️', pl:'Pustynia', en:'Desert', others:['dessert', 'sandy desert', 'pustynia']},
+  {emoji:'🏞️', pl:'Park Narodowy', en:'National Park', others:['natinal park', 'nature park', 'park narodowy']},
+  {emoji:'🏝️', pl:'Wyspa', en:'Island', others:['isand', 'tropical island', 'wyspa']},
+  {emoji:'🏖️', pl:'Plaża', en:'Beach', others:['bech', 'seashore', 'plaza']},
+  {emoji:'🌈', pl:'Tęcza', en:'Rainbow', others:['rain bow', 'colour arc', 'tecza']},
+  {emoji:'🌊', pl:'Fala', en:'Wave', others:['ocean wave', 'sea wave', 'fala']},
+  {emoji:'🌀', pl:'Cyklon', en:'Cyclone', others:['cyclon', 'storm spiral', 'cyklon']},
+  {emoji:'🌪️', pl:'Tornado', en:'Tornado', others:['torando', 'twister', 'tornado']},
+  {emoji:'☔', pl:'Parasol', en:'Umbrella', others:['umbrel', 'rain umbrella', 'parasol']},
+  {emoji:'☁️', pl:'Chmura', en:'Cloud', others:['clud', 'sky cloud', 'chmura']},
+  {emoji:'🌨️', pl:'Śnieg', en:'Snow', others:['sno', 'snowing', 'snieg']},
+  {emoji:'🌧️', pl:'Deszcz', en:'Rain', others:['rein', 'rainfall', 'deszcz']},
+  {emoji:'⛈️', pl:'Burza', en:'Storm', others:['stormm', 'thunderstorm', 'burza']},
+  {emoji:'☀️', pl:'Słońce', en:'Sun', others:['sunshine', 'sun light', 'slonce']},
+  {emoji:'🌙', pl:'Księżyc', en:'Moon', others:['moonlight', 'lunar', 'ksiezyc']},
+  {emoji:'⭐', pl:'Gwiazda', en:'Star', others:['starr', 'bright star', 'gwiazda']},
+  {emoji:'🪐', pl:'Saturn', en:'Saturn', others:['satrun', 'planet saturn', 'saturn']},
+  {emoji:'🌍', pl:'Ziemia', en:'Earth', others:['erth', 'planet earth', 'ziemia']},
+  {emoji:'☄️', pl:'Kometa', en:'Comet', others:['comett', 'space comet', 'kometa']}
      ],
      hard:[
   {emoji:'🤡', pl:'Klaun', en:'Clown', others:['clow', 'clownface', 'klaun']},
@@ -245,7 +263,37 @@
   {emoji:'🤥', pl:'Skłamanie', en:'Lying', others:['lie', 'lyingface', 'sklamanie']},
   {emoji:'😇', pl:'Grzeczny', en:'Innocent', others:['angel', 'goodboy', 'grzeczny']},
   {emoji:'🤑', pl:'Bogaty', en:'Rich', others:['moneyface', 'wealthy', 'bogaty']},
-  {emoji:'👣', pl:'Ślady', en:'Footprints', others:['footprint', 'tracks', 'slady']}
+  {emoji:'👣', pl:'Ślady', en:'Footprints', others:['footprint', 'tracks', 'slady']},
+  {emoji:'💇', pl:'Strzyżenie Włosów', en:'Haircut', others:['hair cut', 'hairdressing', 'strzyzenie']},
+  {emoji:'🛀', pl:'Kąpanie się', en:'Bathing', others:['taking bath', 'bathe', 'kapniecie']},
+  {emoji:'⛹️', pl:'Kozłowanie', en:'Dribbling', others:['dribble', 'ball handling', 'kozlowanie']},
+  {emoji:'🤾', pl:'Rzucanie Piłki', en:'Ball Throwing', others:['throw ball', 'ball toss', 'rzucanie pilki']},
+  {emoji:'🚴', pl:'Jazda na Rowerze', en:'Cycling', others:['bike riding', 'bicycling', 'rower']},
+  {emoji:'🧗', pl:'Wspinanie się', en:'Climbing', others:['rock climbing', 'mountain climb', 'wspinanie']},
+  {emoji:'🏌️', pl:'Granie w Golfa', en:'Playing Golf', others:['golfing', 'golfer', 'gra w golfa']},
+  {emoji:'🏇', pl:'Jazda Konno', en:'Horse Riding', others:['horseback riding', 'equestrian', 'jazda konno']},
+  {emoji:'⛷️', pl:'Jazda na Nartach', en:'Skiing', others:['ski', 'snow skiing', 'narty']},
+  {emoji:'🏂', pl:'Jazda na Snowboardzie', en:'Snowboarding', others:['snow board', 'snowboarder', 'snowbord']},
+  {emoji:'🏄', pl:'Surfowanie', en:'Surfing', others:['surf board', 'surf ride', 'surfowanie']},
+  {emoji:'🚣', pl:'Pływanie Łódką', en:'Rowing Boat', others:['rowing', 'boat paddling', 'plywanie lodka']},
+  {emoji:'🏊', pl:'Pływanie', en:'Swimming', others:['swim', 'swimming pool', 'plywanie']},
+  {emoji:'🤽', pl:'Piłka Wodna', en:'Water Polo', others:['waterpolo', 'pool ball', 'pilka wodna']},
+  {emoji:'🧑‍🎄', pl:'Mikołajowa', en:'Mrs Claus', others:['miss claus', 'santa wife', 'mikolajowa']},
+  {emoji:'🕵️', pl:'Detektyw', en:'Detective', others:['detectiv', 'investigator', 'detektyw']},
+  {emoji:'🧑‍🔬', pl:'Naukowiec', en:'Scientist', others:['sciense person', 'researcher', 'naukowiec']},
+  {emoji:'🧑‍🏫', pl:'Nauczyciel', en:'Teacher', others:['techer', 'instructor', 'nauczyciel']},
+  {emoji:'🧑‍🎓', pl:'Student', en:'Student', others:['studnet', 'pupil', 'student']},
+  {emoji:'🧑‍🦳', pl:'Siwe Włosy', en:'White Hair', others:['grey hair', 'silver hair', 'siwe wlosy']},
+  {emoji:'🧑‍🦰', pl:'Rude Włosy', en:'Red Hair', others:['ginger hair', 'orange hair', 'rude wlosy']},
+  {emoji:'👱', pl:'Blond Włosy', en:'Blond Hair', others:['blonde', 'yellow hair', 'blond wlosy']},
+  {emoji:'🧑‍🦱', pl:'Kręcone Włosy', en:'Curly Hair', others:['curley hair', 'wavy hair', 'krecne wlosy']},
+  {emoji:'🤸', pl:'Robienie Gwiazdy', en:'Cartwheel', others:['cart wheel', 'gymnastic flip', 'gwiazda']},
+  {emoji:'🧚', pl:'Wróżka', en:'Fairy', others:['faery', 'pixie', 'wrozka']},
+  {emoji:'👸', pl:'Księżniczka', en:'Princess', others:['priness', 'royal lady', 'ksiezniczka']},
+  {emoji:'🧑‍🏭', pl:'Robotnik Fabryczny', en:'Factory Worker', others:['plant worker', 'worker factory', 'robotnik']},
+  {emoji:'🧑‍⚖️', pl:'Sędzia', en:'Judge', others:['judje', 'court judge', 'sedzia']},
+  {emoji:'🧑‍💻', pl:'Programista', en:'Programmer', others:['coder', 'developer', 'programista']},
+  {emoji:'👶', pl:'Niemowlę', en:'Baby', others:['babby', 'infant', 'niemowle']}
      ]
     };
 
