--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250825_ksiazeczki.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750272784/odznaka_wmnulc.jpg" alt="Odznaki">
+                <span>Odznaki</span>
+            </a>
             <a href="20250824_puchar.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756053557/pucharklubow_rqrmvj.png" alt="Puchar">
                 <span>Puchar</span>
